--- a/frontend/.project
+++ b/frontend/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hm_frontend</name>
+	<name>Sort_frontend</name>
 	<comment></comment>
 	<projects>
 	</projects>
